--- a/Script/Data_Exploration.ipynb
+++ b/Script/Data_Exploration.ipynb
@@ -30,10 +30,9 @@
    "outputs": [],
    "source": [
     "def plot_single_sample(df):\n",
-    "    # Create subplots with two rows and one column\n",
     "    fig, axs = plt.subplots(2, 1, figsize=(8, 8))\n",
     "\n",
-    "    # Plot S11 magnitude vs. frequency\n",
+    "    # Plot S11 and S22 magnitude vs. frequency\n",
     "    df.plot(x='Freq(Hz)', y=['S11(DB)', 'S22(DB)'], kind='line', ax=axs[0], label=['S11 Magnitude (dB)', 'S22 Magnitude (dB)'])\n",
     "\n",
     "    # Add labels and title for the first subplot\n",
@@ -42,7 +41,7 @@
     "    axs[0].set_title('S11 and S22 Magnitude vs. Frequency')\n",
     "    axs[0].legend()\n",
     "\n",
-    "    # Plot S11 phase vs. frequency\n",
+    "    # Plot S11 and S22 phase vs. frequency\n",
     "    df.plot(x='Freq(Hz)', y=['S11(DEG)', 'S22(DEG)'], kind='line', ax=axs[1], label=['S11 Phase (DEG)', 'S22 Phase (DEG)'])\n",
     "\n",
     "    # Add labels and title for the second subplot\n",
@@ -51,10 +50,7 @@
     "    axs[1].set_title('S11 and S22 Phase vs. Frequency')\n",
     "    axs[1].legend()\n",
     "\n",
-    "    # Adjust layout to prevent clipping of labels\n",
     "    plt.tight_layout()\n",
-    "\n",
-    "    # Show the plot\n",
     "    plt.show()"
    ]
   },
@@ -65,59 +61,30 @@
    "outputs": [],
    "source": [
     "def plot_four_samples(df1, label1, df2, label2, df3, label3, df4, label4):\n",
-    "    # Create a subplot\n",
     "    fig, axs = plt.subplots(2, 2, figsize=(20, 12))\n",
     "\n",
-    "\n",
-    "    # Plot S11 magnitude vs. frequency for dtest_c with a specific color\n",
+    "    #plots of S11(DB)\n",
     "    df1.plot(x='Freq(Hz)', y='S11(DB)', kind='line', ax=axs[0,0], label=str(label1), color='blue')\n",
-    "\n",
-    "    # Plot S11 magnitude vs. frequency for dtest_r with a specific color\n",
     "    df2.plot(x='Freq(Hz)', y='S11(DB)', kind='line', ax=axs[0,0], label=str(label2), color='green')\n",
-    "\n",
-    "    # Plot S11 magnitude vs. frequency for dtest_l with a specific color\n",
     "    df3.plot(x='Freq(Hz)', y='S11(DB)', kind='line', ax=axs[0,0], label=str(label3), color='red')\n",
-    "\n",
-    "    # Plot S11 magnitude vs. frequency for dtest_l with a specific color\n",
     "    df4.plot(x='Freq(Hz)', y='S11(DB)', kind='line', ax=axs[0,0], label=str(label4), color='pink')\n",
     "\n",
-    "\n",
-    "    # Plot S22 magnitude vs. frequency for dtest_c with a specific color\n",
+    "    #plots of S22(DB)\n",
     "    df1.plot(x='Freq(Hz)', y='S22(DB)', kind='line', ax=axs[0,1], label=str(label1), color='blue')\n",
-    "\n",
-    "    # Plot S22 magnitude vs. frequency for dtest_r with a specific color\n",
     "    df2.plot(x='Freq(Hz)', y='S22(DB)', kind='line', ax=axs[0,1], label=str(label2), color='green')\n",
-    "\n",
-    "    # Plot S22 magnitude vs. frequency for dtest_l with a specific color\n",
     "    df3.plot(x='Freq(Hz)', y='S22(DB)', kind='line', ax=axs[0,1], label=str(label3), color='red')\n",
-    "\n",
-    "    # Plot S22 magnitude vs. frequency for dtest_l with a specific color\n",
     "    df4.plot(x='Freq(Hz)', y='S22(DB)', kind='line', ax=axs[0,1], label=str(label4), color='pink')\n",
     "\n",
-    "\n",
-    "    # Plot S11 Phase vs. frequency for dtest_c with a specific color\n",
+    "    #plots of S11(DEG)\n",
     "    df1.plot(x='Freq(Hz)', y='S11(DEG)', kind='line', ax=axs[1,0], label=str(label1), color='blue')\n",
-    "\n",
-    "    # Plot S11 Phase vs. frequency for dtest_r with a specific color\n",
     "    df2.plot(x='Freq(Hz)', y='S11(DEG)', kind='line', ax=axs[1,0], label=str(label2), color='green')\n",
-    "\n",
-    "    # Plot S11 Phase vs. frequency for dtest_l with a specific color\n",
     "    df3.plot(x='Freq(Hz)', y='S11(DEG)', kind='line', ax=axs[1,0], label=str(label3), color='red')\n",
-    "\n",
-    "    # Plot S11 Phase vs. frequency for dtest_l with a specific color\n",
     "    df4.plot(x='Freq(Hz)', y='S11(DEG)', kind='line', ax=axs[1,0], label=str(label4), color='pink')\n",
     "\n",
-    "\n",
-    "    # Plot S22 Phase vs. frequency for dtest_c with a specific color\n",
+    "    #plots of S22(DEG)\n",
     "    df1.plot(x='Freq(Hz)', y='S22(DEG)', kind='line', ax=axs[1,1], label=str(label1), color='blue')\n",
-    "\n",
-    "    # Plot S22 Phase vs. frequency for dtest_r with a specific color\n",
     "    df2.plot(x='Freq(Hz)', y='S22(DEG)', kind='line', ax=axs[1,1], label=str(label2), color='green')\n",
-    "\n",
-    "    # Plot S22 Phase vs. frequency for dtest_l with a specific color\n",
     "    df3.plot(x='Freq(Hz)', y='S22(DEG)', kind='line', ax=axs[1,1], label=str(label3), color='red')\n",
-    "\n",
-    "    # Plot S22 Phase vs. frequency for dtest_l with a specific color\n",
     "    df4.plot(x='Freq(Hz)', y='S22(DEG)', kind='line', ax=axs[1,1], label=str(label4), color='pink')\n",
     "\n",
     "\n",
@@ -136,7 +103,9 @@
     "\n",
     "    axs[1, 1].set_xlabel('Frequency (Hz)')\n",
     "    axs[1, 1].set_ylabel('Magnitude (DEG)')\n",
-    "    axs[1, 1].set_title('S22 DEG vs. Frequency for Testers')    "
+    "    axs[1, 1].set_title('S22 DEG vs. Frequency for Testers')    \n",
+    "\n",
+    "    plt.show()"
    ]
   },
   {
@@ -149,6 +118,8 @@
     "    rows_to_skip = 6\n",
     "    number_of_files = len(os.listdir(path))\n",
     "    plotinfo = pd.DataFrame()\n",
+    "\n",
+    "    #iterate over all the files in the folder\n",
     "    for i in range(1, number_of_files + 1):\n",
     "        file_path = os.path.join(path, f\"Data ({i}).csv\")\n",
     "\n",
@@ -156,6 +127,7 @@
     "            df = pd.read_csv(file_path, skiprows=rows_to_skip).dropna()\n",
     "\n",
     "            intensities = df[variable].values\n",
+    "            #creating a dataframe where every intensity value is inside a column representing the frequency at which the value was extracted\n",
     "            temp_df = pd.DataFrame([intensities], columns=[f'{i}' for i in df['Freq(Hz)']])\n",
     "\n",
     "        plotinfo = pd.concat([plotinfo, temp_df], ignore_index=True)\n",
@@ -170,7 +142,6 @@
    "outputs": [],
    "source": [
     "def heat_map_plot(path, variable):\n",
-    "    # Create a 4x1 subplot grid with shared x-axis and y-axis\n",
     "    fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(20, 15), sharex=True, sharey=True)\n",
     "\n",
     "    axes[-1].set_xlabel('Frequency')\n",
@@ -219,9 +190,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the CSV file\n",
+    "#example of use of plot_single_sample\n",
     "rows_to_skip = 6\n",
-    "df = pd.read_csv(\"./../../Dati/Right/Irene/Data (1).csv\", skiprows=rows_to_skip)\n",
+    "position = \"Right\"\n",
+    "tester = \"Irene\"\n",
+    "file = \"Data (1).csv\"\n",
+    "df = pd.read_csv(\"./../Dati/\" + position + \"/\" + tester + \"/\" + file, skiprows=rows_to_skip)\n",
     "\n",
     "plot_single_sample(df)"
    ]
@@ -244,10 +218,10 @@
    "source": [
     "rows_to_skip = 6\n",
     "position = \"Right\"\n",
-    "df1 = pd.read_csv(\"./../../Dati/\" + str(position) + \"/Lorenzo/Data (984).csv\", skiprows=rows_to_skip)\n",
-    "df2 = pd.read_csv(\"./../../Dati/\" + str(position) + \"/Irene/Data (98).csv\", skiprows=rows_to_skip)\n",
-    "df3 = pd.read_csv(\"./../../Dati/\" + str(position) + \"/Carlotta/Data (48).csv\", skiprows=rows_to_skip)\n",
-    "df4 = pd.read_csv(\"./../../Dati/\" + str(position) + \"/Leo/Data (522).csv\", skiprows=rows_to_skip)\n",
+    "df1 = pd.read_csv(\"./../Dati/\" + str(position) + \"/Lorenzo/Data (984).csv\", skiprows=rows_to_skip)\n",
+    "df2 = pd.read_csv(\"./../Dati/\" + str(position) + \"/Irene/Data (98).csv\", skiprows=rows_to_skip)\n",
+    "df3 = pd.read_csv(\"./../Dati/\" + str(position) + \"/Carlotta/Data (48).csv\", skiprows=rows_to_skip)\n",
+    "df4 = pd.read_csv(\"./../Dati/\" + str(position) + \"/Leo/Data (522).csv\", skiprows=rows_to_skip)\n",
     "\n",
     "plot_four_samples(df1, \"Lorenzo-\" + str(position), df2, \"Irene-\" + str(position), df3, \"Carlotta-\" + str(position), df4, \"Leo-\" + str(position))"
    ]
@@ -270,7 +244,7 @@
    "source": [
     "# Choose the variables to be plotted\n",
     "variable = 'S11(DB)'\n",
-    "path = \"./../../Dati/Left/\"\n",
+    "path = \"./../Dati/Left/\"\n",
     "\n",
     "heat_map_plot(path, variable)"
    ]
@@ -299,27 +273,30 @@
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "filter_test = pd.read_csv(\"./../../Dati/Centered/Carlotta/Data (1000).csv\", skiprows=6).dropna()\n",
+    "filter_test = pd.read_csv(\"./../Dati/Centered/Carlotta/Data (1000).csv\", skiprows=6).dropna()\n",
     "\n",
-    "# Assuming 'Freq(Hz)' and 'S11(DB)' are column names in your CSV file\n",
-    "temp_df = filter_test[['Freq(Hz)', 'S11(DB)']].rename(columns={'Freq(Hz)': 'X', 'S11(DB)': 'Y'})\n",
+    "x_axis = 'Freq(Hz)'\n",
+    "y_axis = 'S11(DB)'\n",
     "\n",
-    "# Convert columns to float if not already\n",
-    "temp_df['X'] = temp_df['X'].astype(float)\n",
-    "temp_df['Y'] = temp_df['Y'].astype(float)\n",
+    "# Explicitly create a copy of the subset DataFrame\n",
+    "temp_df = filter_test[[x_axis, y_axis]].copy()\n",
     "\n",
-    "# Fit a polynomial of a certain degree (e.g., 5)\n",
+    "# Convert 'Freq(Hz)' to float and 'S22(DEG)' to float using df[df.columns[i]] = newvals\n",
+    "temp_df[temp_df.columns[0]] = temp_df[x_axis].astype(np.int64)\n",
+    "temp_df[temp_df.columns[1]] = temp_df[y_axis].astype(float)\n",
+    "\n",
+    "# Fit a polynomial of a certain degree\n",
     "degree = 5\n",
-    "coefficients = np.polyfit(temp_df['X'], temp_df['Y'], degree)\n",
+    "coefficients = np.polyfit(temp_df[x_axis], temp_df[y_axis], degree)\n",
     "fitted_polynomial = Polynomial(coefficients)\n",
     "\n",
     "# Calculate residuals\n",
-    "residuals = temp_df['Y'] - fitted_polynomial(temp_df['X'])\n",
+    "residuals = temp_df[y_axis] - fitted_polynomial(temp_df[x_axis])\n",
     "\n",
     "# Plot residuals\n",
-    "plt.scatter(temp_df['X'], residuals, label='Residuals')\n",
+    "plt.scatter(temp_df[x_axis], residuals, label='Residuals')\n",
     "plt.axhline(0, color='red', linestyle='--', label='Zero Residuals')\n",
-    "plt.xlabel('X')\n",
+    "plt.xlabel(x_axis)\n",
     "plt.ylabel('Residuals')\n",
     "plt.legend()\n",
     "plt.title('Residuals of Polynomial Fit')\n",
@@ -340,24 +317,27 @@
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "filter_test = pd.read_csv(\"./../../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
+    "filter_test = pd.read_csv(\"./../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
     "\n",
-    "# Assuming 'Freq(Hz)' and 'S11(DB)' are column names in your CSV file\n",
-    "temp_df = filter_test[['Freq(Hz)', 'S11(DB)']].rename(columns={'Freq(Hz)': 'X', 'S11(DB)': 'Y'})\n",
+    "x_axis = 'Freq(Hz)'\n",
+    "y_axis = 'S11(DB)'\n",
     "\n",
-    "# Convert columns to float if not already\n",
-    "temp_df['X'] = temp_df['X'].astype(float)\n",
-    "temp_df['Y'] = temp_df['Y'].astype(float)\n",
+    "# Explicitly create a copy of the subset DataFrame\n",
+    "temp_df = filter_test[[x_axis, y_axis]].copy()\n",
+    "\n",
+    "# Convert 'Freq(Hz)' to float and 'S22(DEG)' to float using df[df.columns[i]] = newvals\n",
+    "temp_df[temp_df.columns[0]] = temp_df[x_axis].astype(np.int64)\n",
+    "temp_df[temp_df.columns[1]] = temp_df[y_axis].astype(float)\n",
     "\n",
     "# Apply Simple Moving Average (SMA)\n",
-    "window_size = 30  # Adjust the window size based on your preference\n",
-    "temp_df['SMA'] = temp_df['Y'].rolling(window=window_size, min_periods=1).mean()\n",
+    "window_size = 30\n",
+    "temp_df['SMA'] = temp_df[y_axis].rolling(window=window_size, min_periods=1).mean()\n",
     "\n",
     "# Plot the original data and SMA\n",
-    "plt.scatter(temp_df['X'], temp_df['Y'], label='Original Data')\n",
-    "plt.plot(temp_df['X'], temp_df['SMA'], label=f'SMA (window={window_size})', color='red', linewidth=2)\n",
-    "plt.xlabel('X')\n",
-    "plt.ylabel('Y')\n",
+    "plt.scatter(temp_df[x_axis], temp_df[y_axis], label='Original Data')\n",
+    "plt.plot(temp_df[x_axis], temp_df['SMA'], label=f'SMA (window={window_size})', color='red', linewidth=2)\n",
+    "plt.xlabel(x_axis)\n",
+    "plt.ylabel(y_axis)\n",
     "plt.legend()\n",
     "plt.title('Simple Moving Average (SMA)')\n",
     "plt.show()"
@@ -377,24 +357,27 @@
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "filter_test = pd.read_csv(\"./../../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
+    "filter_test = pd.read_csv(\"./../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
     "\n",
-    "# Assuming 'Freq(Hz)' and 'S11(DB)' are column names in your CSV file\n",
-    "temp_df = filter_test[['Freq(Hz)', 'S11(DB)']].rename(columns={'Freq(Hz)': 'X', 'S11(DB)': 'Y'})\n",
+    "x_axis = 'Freq(Hz)'\n",
+    "y_axis = 'S11(DB)'\n",
     "\n",
-    "# Convert columns to float if not already\n",
-    "temp_df['X'] = temp_df['X'].astype(float)\n",
-    "temp_df['Y'] = temp_df['Y'].astype(float)\n",
+    "# Explicitly create a copy of the subset DataFrame\n",
+    "temp_df = filter_test[[x_axis, y_axis]].copy()\n",
+    "\n",
+    "# Convert 'Freq(Hz)' to float and 'S22(DEG)' to float using df[df.columns[i]] = newvals\n",
+    "temp_df[temp_df.columns[0]] = temp_df[x_axis].astype(np.int64)\n",
+    "temp_df[temp_df.columns[1]] = temp_df[y_axis].astype(float)\n",
     "\n",
     "# Apply Exponential Moving Average (EMA)\n",
-    "span = 20  # Adjust the span parameter based on your preference\n",
-    "temp_df['EMA'] = temp_df['Y'].ewm(span=span, adjust=False).mean()\n",
+    "span = 20\n",
+    "temp_df['EMA'] = temp_df[y_axis].ewm(span=span, adjust=False).mean()\n",
     "\n",
     "# Plot the original data and EMA\n",
-    "plt.scatter(temp_df['X'], temp_df['Y'], label='Original Data')\n",
-    "plt.plot(temp_df['X'], temp_df['EMA'], label=f'EMA (span={span})', color='red', linewidth=2)\n",
-    "plt.xlabel('X')\n",
-    "plt.ylabel('Y')\n",
+    "plt.scatter(temp_df[x_axis], temp_df[y_axis], label='Original Data')\n",
+    "plt.plot(temp_df[x_axis], temp_df['EMA'], label=f'EMA (span={span})', color='red', linewidth=2)\n",
+    "plt.xlabel(x_axis)\n",
+    "plt.ylabel(y_axis)\n",
     "plt.legend()\n",
     "plt.title('Exponential Moving Average (EMA)')\n",
     "plt.show()"
@@ -407,28 +390,38 @@
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "filter_test = pd.read_csv(\"./../../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
+    "filter_test = pd.read_csv(\"./../Dati/Left/Irene/Data (100).csv\", skiprows=6).dropna()\n",
     "\n",
-    "# Assuming 'Freq(Hz)' and 'S11(DB)' are column names in your CSV file\n",
-    "temp_df = filter_test[['Freq(Hz)', 'S22(DEG)']].rename(columns={'Freq(Hz)': 'X', 'S22(DEG)': 'Y'})\n",
+    "x_axis = 'Freq(Hz)'\n",
+    "y_axis = 'S22(DEG)'\n",
     "\n",
-    "# Convert columns to float if not already\n",
-    "temp_df['X'] = temp_df['X'].astype(float)\n",
-    "temp_df['Y'] = temp_df['Y'].astype(float)\n",
+    "# Explicitly create a copy of the subset DataFrame\n",
+    "temp_df = filter_test[[x_axis, y_axis]].copy()\n",
+    "\n",
+    "# Convert 'Freq(Hz)' to float and 'S22(DEG)' to float using df[df.columns[i]] = newvals\n",
+    "temp_df[temp_df.columns[0]] = temp_df[x_axis].astype(np.int64)\n",
+    "temp_df[temp_df.columns[1]] = temp_df[y_axis].astype(float)\n",
     "\n",
     "# Apply Exponential Moving Average (EMA)\n",
-    "span = 20  # Adjust the span parameter based on your preference\n",
-    "temp_df['EMA'] = temp_df['Y'].ewm(span=span, adjust=False).mean()\n",
+    "span = 20\n",
+    "temp_df['EMA'] = temp_df[y_axis].ewm(span=span, adjust=False).mean()\n",
     "\n",
     "# Plot the original data and EMA\n",
-    "plt.scatter(temp_df['X'], temp_df['Y'], label='Original Data')\n",
-    "plt.plot(temp_df['X'], temp_df['EMA'], label=f'EMA (span={span})', color='red', linewidth=2)\n",
-    "plt.xlabel('X')\n",
-    "plt.ylabel('Y')\n",
+    "plt.scatter(temp_df[x_axis], temp_df[y_axis], label='Original Data')\n",
+    "plt.plot(temp_df[x_axis], temp_df['EMA'], label=f'EMA (span={span})', color='red', linewidth=2)\n",
+    "plt.xlabel(x_axis)\n",
+    "plt.ylabel(y_axis)\n",
     "plt.legend()\n",
     "plt.title('Exponential Moving Average (EMA)')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
