--- a/Script/Data_Preprocessing.ipynb
+++ b/Script/Data_Preprocessing.ipynb
@@ -33,27 +33,31 @@
     "def load_data(path, smoothing_present = True):\n",
     "    intermediate = pd.DataFrame()\n",
     "    data = pd.DataFrame()\n",
-    "    freq_scale = 1000000\n",
+    "    freq_scale = 1000000 #the frequencies as scaled by a factor 10^(6)\n",
     "    rows_to_skip = 6\n",
     "    i = 0\n",
-    "    span = 20\n",
+    "    span = 20   #window size for the smoothing\n",
     "    number_of_files = len(os.listdir(path))\n",
     "\n",
+    "    #iterate over the files in the folder\n",
     "    for i in range(1, number_of_files+1):\n",
     "        if os.path.exists(path + f\"/Data ({i}).csv\"):\n",
     "            df = pd.read_csv(path + f\"/Data ({i}).csv\", skiprows=rows_to_skip)\n",
-    "            \n",
+    "\n",
+    "        #smoothing \n",
     "        if(smoothing_present):\n",
     "            df['S11(DB)'] = df['S11(DB)'].ewm(span=span, adjust=False).mean()\n",
     "            df['S22(DB)'] = df['S22(DB)'].ewm(span=span, adjust=False).mean()\n",
     "            df['S11(DEG)'] = df['S11(DEG)'].ewm(span=span, adjust=False).mean()\n",
     "            df['S22(DEG)'] = df['S22(DEG)'].ewm(span=span, adjust=False).mean()\n",
     "\n",
-    "        maxS11 = df.loc[df['S11(DB)'].abs().idxmax()]\n",
-    "        maxS22 = df.loc[df['S22(DB)'].abs().idxmax()]\n",
+    "        #exctract the rows with maximum values both of S11(DB) and S22(DB)\n",
+    "        row_maxS11 = df.loc[df['S11(DB)'].abs().idxmax()]\n",
+    "        row_maxS22 = df.loc[df['S22(DB)'].abs().idxmax()]\n",
     "\n",
-    "        intermediate = pd.DataFrame([(pd.to_numeric(maxS11['Freq(Hz)'])/freq_scale), maxS11['S11(DB)'], maxS11['S11(DEG)'], (pd.to_numeric(maxS22['Freq(Hz)'])/freq_scale), \n",
-    "                        maxS22['S22(DB)'], maxS22['S22(DEG)']])\n",
+    "        #create a dataframe with the values of phase and frequency corresponding to the previus rows\n",
+    "        intermediate = pd.DataFrame([(pd.to_numeric(row_maxS11['Freq(Hz)'])/freq_scale), row_maxS11['S11(DB)'], row_maxS11['S11(DEG)'], (pd.to_numeric(row_maxS22['Freq(Hz)'])/freq_scale), \n",
+    "                        row_maxS22['S22(DB)'], row_maxS22['S22(DEG)']])\n",
     "        \n",
     "        data = pd.concat([data, intermediate.T], ignore_index=True)\n",
     "\n",
@@ -69,17 +73,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cls = 0 (Left), cls = 1 (center), cls = 2 (Right), cls = 3 (None)\n",
-    "#weight = 60 (Irene), 70 (Carlotta), Leo(80), Lorenzo(90)\n",
+    "#values of cls = 0 (Left), cls = 1 (center), cls = 2 (Right)\n",
+    "#weights of the testers = 60 (Irene), 70 (Carlotta), 80 (Leo), 90 (Lorenzo)\n",
     "def calculate_window_information(dataset, window_size = 50, weight=-1, step_size = 20, instances_to_skip = 150, cls=-1):\n",
     "    windowed_dataset = pd.DataFrame()\n",
     "    iterator = dataset.iterrows()\n",
-    "    first_time = True\n",
     "\n",
     "    for i, rows in iterator:\n",
+    "        #consider only the windows that must be calculated (due to the window size or the removal of the initial or final instances)\n",
     "        if (i < (window_size - 1)) | (i < instances_to_skip) | (i > (len(dataset) - instances_to_skip)):\n",
     "            continue\n",
     "\n",
+    "        #calculate the means\n",
     "        meanFreq_MaxS11 = pd.to_numeric(dataset['Freq(Hz)S11'].iloc[i-(window_size - 1): i]).mean()\n",
     "        mean_MaxS11 = dataset['S11(DB)'].iloc[i-(window_size - 1): i].mean()\n",
     "        mean_S11DEG = dataset['S11(DEG)'].iloc[i-(window_size - 1): i].mean()\n",
@@ -88,10 +93,7 @@
     "        mean_MaxS22 = dataset['S22(DB)'].iloc[i-(window_size - 1): i].mean()\n",
     "        mean_S22DEG = dataset['S22(DEG)'].iloc[i-(window_size - 1): i].mean()\n",
     "\n",
-    "        #if first_time:\n",
-    "        #    first_time = False\n",
-    "        #    print(dataset.iloc[i-(window_size - 1): i])\n",
-    "            \n",
+    "        #calculate the variances\n",
     "        varFreq_MaxS11 = np.var(pd.to_numeric(dataset['Freq(Hz)S11'].iloc[i-(window_size - 1): i]))\n",
     "        var_MaxS11 = np.var(dataset['S11(DB)'].iloc[i-(window_size - 1): i])\n",
     "        var_S11DEG = np.var(dataset['S11(DEG)'].iloc[i-(window_size - 1): i])\n",
@@ -100,12 +102,14 @@
     "        var_MaxS22 = np.var(dataset['S22(DB)'].iloc[i-(window_size - 1): i])\n",
     "        var_S22DEG = np.var(dataset['S22(DEG)'].iloc[i-(window_size - 1): i])\n",
     "\n",
+    "\n",
     "        intermediate = pd.DataFrame([meanFreq_MaxS11, mean_MaxS11, mean_S11DEG, meanFreq_MaxS22, mean_MaxS22, \n",
     "                                    mean_S22DEG, varFreq_MaxS11, var_MaxS11, var_S11DEG, varFreq_MaxS22, var_MaxS22, \n",
     "                                    var_S22DEG, weight, cls])\n",
     "        \n",
     "        windowed_dataset = pd.concat([windowed_dataset, intermediate.T], ignore_index=True)\n",
     "\n",
+    "        #skip the necessary rows to jump to the next window\n",
     "        for _ in range(step_size - 1):\n",
     "            next(iterator, None)\n",
     "            \n",
@@ -127,14 +131,13 @@
     "    y = df[var2]\n",
     "    classes = df['Class']\n",
     "\n",
-    "    # Mappa dei valori\n",
-    "    mappa_valori = {0.0: 'Left', 1.0: 'Centered', 2.0: 'Right'}\n",
+    "    map = {0.0: 'Left', 1.0: 'Centered', 2.0: 'Right'}\n",
     "\n",
     "    # Sostituisci i valori nell'array\n",
-    "    array_con_stringhe = np.where(np.isin(classes, list(mappa_valori.keys())), [mappa_valori[val] for val in classes], classes)\n",
+    "    array_con_stringhe = np.where(np.isin(classes, list(map.keys())), [map[val] for val in classes], classes)\n",
     "\n",
     "    unique = list(set(array_con_stringhe))\n",
-    "\n",
+    "    \n",
     "    # Assign colors based on unique values\n",
     "    colors = plt.cm.get_cmap('jet', len(unique))\n",
     "\n",
@@ -163,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The best results aer with smoothing of the signal\n",
+    "#The best results are obtained with smoothing of the signal\n",
     "smoothing = True\n",
     "step_size = 10\n",
     "window_size = 50\n",
@@ -185,13 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_carlotta_path = \"./../../Dati/Centered/Carlotta\"\n",
+    "c_carlotta_path = \"./../Dati/Centered/Carlotta\"\n",
     "c_carlotta = load_data(c_carlotta_path, smoothing_present=smoothing)\n",
     "\n",
-    "r_carlotta_path = \"./../../Dati/Right/Carlotta\"\n",
+    "r_carlotta_path = \"./..//Dati/Right/Carlotta\"\n",
     "r_carlotta = load_data(r_carlotta_path, smoothing_present=smoothing)\n",
     "\n",
-    "l_carlotta_path = \"./../../Dati/Left/Carlotta\"\n",
+    "l_carlotta_path = \"./../Dati/Left/Carlotta\"\n",
     "l_carlotta = load_data(l_carlotta_path, smoothing_present=smoothing)"
    ]
   },
@@ -229,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file_path = \"./../../Data_unificati/carlotta_smooth.csv\"\n",
+    "csv_file_path = \"./../Dati_unificati/carlotta_smooth.csv\"\n",
     "carlotta.to_csv(csv_file_path, index=False)\n",
     "\n",
     "print(f\"Data has been exported to {csv_file_path}\")"
@@ -248,13 +251,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_leo_path = \"./../../Dati/Centered/Leo\"\n",
+    "c_leo_path = \"./../Dati/Centered/Leo\"\n",
     "c_leo = load_data(c_leo_path, smoothing_present=smoothing)\n",
     "\n",
-    "r_leo_path = \"./../../Dati/Right/Leo\"\n",
+    "r_leo_path = \"./../Dati/Right/Leo\"\n",
     "r_leo = load_data(r_leo_path, smoothing_present=smoothing)\n",
     "\n",
-    "l_leo_path = \"./../../Dati/Left/Leo\"\n",
+    "l_leo_path = \"./../Dati/Left/Leo\"\n",
     "l_leo = load_data(l_leo_path, smoothing_present=smoothing)"
    ]
   },
@@ -292,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file_path = \"./../../Data_unificati/leo_smooth.csv\"\n",
+    "csv_file_path = \"./../Dati_unificati/leo_smooth.csv\"\n",
     "leo.to_csv(csv_file_path, index=False)\n",
     "\n",
     "print(f\"Data has been exported to {csv_file_path}\")"
@@ -311,13 +314,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_lorenzo_path = \"./../../Dati/Centered/Lorenzo\"\n",
+    "c_lorenzo_path = \"./../Dati/Centered/Lorenzo\"\n",
     "c_lorenzo = load_data(c_lorenzo_path, smoothing_present=smoothing)\n",
     "\n",
-    "r_lorenzo_path = \"./../../Dati/Right/Lorenzo\"\n",
+    "r_lorenzo_path = \"./../Dati/Right/Lorenzo\"\n",
     "r_lorenzo = load_data(r_lorenzo_path, smoothing_present=smoothing)\n",
     "\n",
-    "l_lorenzo_path = \"./../../Dati/Left/Lorenzo\"\n",
+    "l_lorenzo_path = \"./../Dati/Left/Lorenzo\"\n",
     "l_lorenzo = load_data(l_lorenzo_path, smoothing_present=smoothing)"
    ]
   },
@@ -355,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file_path = \"./../../Data_unificati/lorenzo_smooth.csv\"\n",
+    "csv_file_path = \"./../Dati_unificati/lorenzo_smooth.csv\"\n",
     "lorenzo.to_csv(csv_file_path, index=False)\n",
     "\n",
     "print(f\"Data has been exported to {csv_file_path}\")"
@@ -374,13 +377,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_irene_path = \"./../../Dati/Centered/Irene\"\n",
+    "c_irene_path = \"./../Dati/Centered/Irene\"\n",
     "c_irene = load_data(c_irene_path, smoothing_present=smoothing)\n",
     "\n",
-    "r_irene_path = \"./../../Dati/Right/Irene\"\n",
+    "r_irene_path = \"./../Dati/Right/Irene\"\n",
     "r_irene = load_data(r_irene_path, smoothing_present=smoothing)\n",
     "\n",
-    "l_irene_path = \"./../../Dati/Left/Irene\"\n",
+    "l_irene_path = \"./../Dati/Left/Irene\"\n",
     "l_irene = load_data(l_irene_path, smoothing_present=smoothing)"
    ]
   },
@@ -417,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file_path = \"./../../Data_unificati/irene_smooth.csv\"\n",
+    "csv_file_path = \"./../Dati_unificati/irene_smooth.csv\"\n",
     "irene.to_csv(csv_file_path, index=False)\n",
     "\n",
     "print(f\"Data has been exported to {csv_file_path}\")"
@@ -439,6 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create a complete dataset if needed\n",
     "complete_dataset = pd.concat([irene, carlotta, leo, lorenzo], ignore_index=True)"
    ]
   },
