--- a/Script/Classification_Pipeline.ipynb
+++ b/Script/Classification_Pipeline.ipynb
@@ -40,10 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lorenzo = pd.read_csv(\"./../../Data_unificati/lorenzo_smooth.csv\")\n",
-    "Leo = pd.read_csv(\"./../../Data_unificati/leo_smooth.csv\")\n",
-    "Irene = pd.read_csv(\"./../../Data_unificati/irene_smooth.csv\")\n",
-    "Carlotta = pd.read_csv(\"./../../Data_unificati/carlotta_smooth.csv\")\n",
+    "#load the datasets\n",
+    "Lorenzo = pd.read_csv(\"./../Dati_unificati/lorenzo_smooth.csv\")\n",
+    "Leo = pd.read_csv(\"./../Dati_unificati/leo_smooth.csv\")\n",
+    "Irene = pd.read_csv(\"./../Dati_unificati/irene_smooth.csv\")\n",
+    "Carlotta = pd.read_csv(\"./../Dati_unificati/carlotta_smooth.csv\")\n",
     "\n",
     "ds = pd.concat([Lorenzo, Leo, Irene, Carlotta], ignore_index=True)\n",
     "\n",
@@ -104,7 +105,9 @@
     "\n",
     "results = pd.DataFrame(columns=['X', 'Mean', 'Min', 'Max'])\n",
     "\n",
+    "#Search between 1 nearest neighbor and 80 nearest neighbor\n",
     "for n in range(1, 80):\n",
+    "    #Pipeline parameters\n",
     "    classifier_KNN = KNeighborsClassifier(n_neighbors=n)\n",
     "    scaler = RobustScaler()\n",
     "    feat_sel = SelectKBest(k=2)\n",
@@ -112,6 +115,7 @@
     "    estimators_KNN = [('scaling', scaler), ('feature-selection', feat_sel), ('clf', classifier_KNN)]\n",
     "    pipe_KNN = Pipeline(estimators_KNN)\n",
     "\n",
+    "    #Cross validation with leave-one-subject-out\n",
     "    scores_KNN = cross_validate(pipe_KNN,\n",
     "                                X,\n",
     "                                y,\n",
@@ -158,7 +162,7 @@
     "# Plot the maximum F-score\n",
     "plt.plot(results['X'], results['Max'], color='green', linewidth=2, linestyle='--', label='Max F-score')\n",
     "\n",
-    "# Highlight the point of minimum F-score\n",
+    "# Highlight the point of minimum F-score corresponding to max_mean_index\n",
     "plt.scatter(results['X'][max_mean_index], results['Min'][max_mean_index], color='brown', marker='*', s=100)\n",
     "plt.annotate(f'Corresponding Min F-score\\n({results[\"Min\"][max_mean_index]:.3f})',\n",
     "             (results['X'][max_mean_index], results['Min'][max_mean_index]),\n",
@@ -168,7 +172,7 @@
     "             color='brown')\n",
     "\n",
     "\n",
-    "# Highlight the point of maximum F-score\n",
+    "# Highlight the point of maximum F-score corresponding to max_mean_index\n",
     "plt.scatter(results['X'][max_mean_index], results['Max'][max_mean_index], color='purple', marker='*', s=100)\n",
     "plt.annotate(f'Corresponding Max F-score\\n({results[\"Max\"][max_mean_index]:.3f})',\n",
     "             (results['X'][max_mean_index], results['Max'][max_mean_index]),\n",
@@ -269,17 +273,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "plt.figure(figsize=(10, 6))\n",
-    "\n",
     "results = pd.DataFrame(columns=['X', 'Mean', 'Min', 'Max'])\n",
     "\n",
-    "# 2 estimators is the best choice, change other parameters\n",
+    "#iterate over min_sample_leaf\n",
     "for n in range(1, 10):\n",
+    "    #iterate over min_samples_split\n",
     "    for m in range(1, 50):\n",
+    "        #iterate over n_estimators\n",
     "        for e in range(1, 500, 20):\n",
     "            classifier_RF = RandomForestClassifier(n_estimators=e, min_samples_split=m, min_samples_leaf=n, max_features='sqrt', bootstrap=True, max_depth=10)\n",
     "            scaler = RobustScaler()\n",
@@ -313,9 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X         41-2-1\n",
+      "Mean    0.788409\n",
+      "Min     0.535884\n",
+      "Max          1.0\n",
+      "Name: 180, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the index of the maximum mean F-score\n",
     "max_mean_index = results['Mean'].idxmax()\n",
