--- a/Script/Performance_Evaluation.ipynb
+++ b/Script/Performance_Evaluation.ipynb
@@ -35,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#converts tree in a readable list of rules \n",
     "def tree_to_code(tree, feature_names):\n",
     "    tree_ = tree.tree_\n",
     "    feature_name = [\n",
@@ -69,11 +70,10 @@
     "    y = df[var2]\n",
     "    classes = df['Class']\n",
     "\n",
-    "    # Mappa dei valori\n",
-    "    mappa_valori = {0.0: 'Left', 1.0: 'Centered', 2.0: 'Right'}\n",
+    "    map = {0.0: 'Left', 1.0: 'Centered', 2.0: 'Right'}\n",
     "\n",
     "    # Sostituisci i valori nell'array\n",
-    "    array_con_stringhe = np.where(np.isin(classes, list(mappa_valori.keys())), [mappa_valori[val] for val in classes], classes)\n",
+    "    array_con_stringhe = np.where(np.isin(classes, list(map.keys())), [map[val] for val in classes], classes)\n",
     "\n",
     "    unique = list(set(array_con_stringhe))\n",
     "\n",
@@ -105,10 +105,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lorenzo = pd.read_csv(\"./../../Data_unificati/lorenzo_smooth.csv\")\n",
-    "Leo = pd.read_csv(\"./../../Data_unificati/leo_smooth.csv\")\n",
-    "Irene = pd.read_csv(\"./../../Data_unificati/irene_smooth.csv\")\n",
-    "Carlotta = pd.read_csv(\"./../../Data_unificati/carlotta_smooth.csv\")\n",
+    "Lorenzo = pd.read_csv(\"./../Dati_unificati/lorenzo_smooth.csv\")\n",
+    "Leo = pd.read_csv(\"./../Dati_unificati/leo_smooth.csv\")\n",
+    "Irene = pd.read_csv(\"./../Dati_unificati/irene_smooth.csv\")\n",
+    "Carlotta = pd.read_csv(\"./../Dati_unificati/carlotta_smooth.csv\")\n",
     "\n",
     "ds = pd.concat([Lorenzo, Leo, Irene, Carlotta], ignore_index=True)\n",
     "\n",
@@ -141,6 +141,8 @@
    "outputs": [],
    "source": [
     "results_KNN = []\n",
+    "\n",
+    "#gives 800 values of test_fscore to be checked with Wilcoxon signed rank test\n",
     "for i in range(1, 201):    \n",
     "    classifier_KNN = KNeighborsClassifier(n_neighbors=6)\n",
     "    scaler = RobustScaler()\n",
@@ -186,6 +188,7 @@
    "source": [
     "results_RF = []  # List to store results\n",
     "\n",
+    "#gives 800 values of test_fscore to be checked with Wilcoxon signed rank test\n",
     "for i in range(1, 201):\n",
     "    classifier_RF = RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10, random_state=i)\n",
     "    scaler = RobustScaler()\n",
@@ -231,6 +234,8 @@
    "outputs": [],
    "source": [
     "results_AB = []\n",
+    "\n",
+    "#gives 800 values of test_fscore to be checked with Wilcoxon signed rank test\n",
     "for i in range(1,201):\n",
     "    classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10, random_state=i), n_estimators=400, random_state=i)\n",
     "    scaler = RobustScaler()\n",
@@ -251,6 +256,7 @@
     "                                        'accuracy': make_scorer(accuracy_score)}\n",
     "    )\n",
     "    results_AB.append(pd.DataFrame(scores_AdaBoost))\n",
+    "    \n",
     "# Concatenate results outside the loop\n",
     "final_results_AdaBoost = pd.concat(results_AB, ignore_index=True)\n",
     "print(final_results_AdaBoost)"
@@ -284,6 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#boxplot of the results of the three models\n",
     "from matplotlib import pyplot as plt\n",
     "ax = metrics.boxplot(figsize = (3,3))\n",
     "ax.set_ylabel('f-score')\n",
@@ -336,16 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creates a classifier that tries to predict the tester with the worst performances to see why\n",
     "\n",
-    "print( ds[(ds['Tester'] == 'Lorenzo')].drop(columns=['Class', 'Tester']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10), n_estimators=400, random_state=0)\n",
     "scaler = RobustScaler()\n",
     "feat_sel = SelectKBest(k=2)\n",
@@ -370,38 +369,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "def tree(meanFreq_MaxS11, mean_S11DEG):\n",
-      "  if meanFreq_MaxS11 <= 0.15777262393385172:\n",
-      "    if mean_S11DEG <= 0.1628556177020073:\n",
-      "      return 1\n",
-      "    elif mean_S11DEG > 0.1628556177020073\n",
-      "      if meanFreq_MaxS11 <= -1.5672853589057922:\n",
-      "        return 0\n",
-      "      elif meanFreq_MaxS11 > -1.5672853589057922\n",
-      "        return 0\n",
-      "  elif meanFreq_MaxS11 > 0.15777262393385172\n",
-      "    if meanFreq_MaxS11 <= 0.76450115442276:\n",
-      "      if meanFreq_MaxS11 <= 0.30162413418293:\n",
-      "        return 2\n",
-      "      elif meanFreq_MaxS11 > 0.30162413418293\n",
-      "        return 2\n",
-      "    elif meanFreq_MaxS11 > 0.76450115442276\n",
-      "      if meanFreq_MaxS11 <= 0.8689095079898834:\n",
-      "        return 1\n",
-      "      elif meanFreq_MaxS11 > 0.8689095079898834\n",
-      "        return 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#visulization of the tree rules\n",
     "tree_to_code(pipe_AdaBoost['clf'].estimators_[0].estimators_[1], X.columns[pipe_AdaBoost['feature-selection'].get_support()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scale the lorenzo dataset to confront it agaist the tree rules\n",
+    "columns = ds[(ds['Tester'] == 'Lorenzo')].drop(columns=['Class', 'Tester']).columns\n",
+    "class_col = ds[(ds['Tester'] == 'Lorenzo')]['Class']\n",
+    "\n",
+    "scaled_lorenzo = pd.DataFrame(scaler.fit_transform(ds[(ds['Tester'] == 'Lorenzo')].drop(columns=['Class', 'Tester'])))\n",
+    "scaled_lorenzo.columns = columns\n",
+    "scaled_lorenzo['Class'] = class_col"
    ]
   },
   {
@@ -410,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scatter_plot(ds[(ds['Tester'] == 'Lorenzo')], 'meanFreq_MaxS11', 'meanFreq_MaxS22')"
+    "scatter_plot(scaled_lorenzo, 'meanFreq_MaxS11', 'meanFreq_MaxS22')"
    ]
   }
  ],
