--- a/Script/Performance_Evaluation.ipynb
+++ b/Script/Performance_Evaluation.ipynb
@@ -396,27 +396,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler.fit_transform(X_test[[X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][0], X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][1]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature1 = X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][0]\n",
-    "feature2 = X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][1]\n",
-    "print(feature1)\n",
-    "print(feature2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "feature1 = X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][0]\n",
     "feature2 = X.columns[pipe_AdaBoost_tree['feature-selection'].get_support()][1]\n",
     "tree_test = X_test[[feature1, feature2]]\n",
@@ -455,10 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var1 = X.columns[pipe_AdaBoost['feature-selection'].get_support()][0]\n",
-    "var2 = X.columns[pipe_AdaBoost['feature-selection'].get_support()][1]\n",
-    "\n",
-    "scatter_plot(scaled_lorenzo, var1, var2, 'Lorenzo')"
+    "scatter_plot(scaled_lorenzo, feature1, feature2, 'Lorenzo')"
    ]
   }
  ],
