--- a/Script/Performance_Evaluation.ipynb
+++ b/Script/Performance_Evaluation.ipynb
@@ -244,7 +244,7 @@
     "\n",
     "#gives 800 values of test_fscore to be checked with Wilcoxon signed rank test\n",
     "for i in range(1,201):\n",
-    "    classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10, random_state=i), n_estimators=83, random_state=i)\n",
+    "    classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10, random_state=i), random_state=i)\n",
     "    scaler = RobustScaler()\n",
     "    feat_sel = SelectKBest(k=2)\n",
     "\n",
@@ -358,7 +358,7 @@
    "source": [
     "#creates a classifier that tries to predict the tester with the worst performances to see why\n",
     "\n",
-    "classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10), n_estimators=83, random_state=0)\n",
+    "classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10), random_state=0)\n",
     "scaler = RobustScaler()\n",
     "feat_sel = SelectKBest(k=2)\n",
     "\n",
