--- a/Script/ClassificationModel_Pipeline.ipynb
+++ b/Script/ClassificationModel_Pipeline.ipynb
@@ -421,54 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame(columns=['X', 'Mean', 'Min', 'Max'])\n",
-    "\n",
-    "for i in range(1,2000):\n",
-    "    classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10), \n",
-    "                                            n_estimators=i, random_state=i)\n",
-    "    scaler = RobustScaler()\n",
-    "    feat_sel = SelectKBest(k=2)\n",
-    "\n",
-    "    estimators_AdaBoost = [('scaling', scaler), ('feature-selection', feat_sel), ('clf', classifier_AdaBoost)]\n",
-    "    pipe_AdaBoost = Pipeline(estimators_AdaBoost)\n",
-    "\n",
-    "    scores_AdaBoost = cross_validate(pipe_AdaBoost,\n",
-    "                            X,\n",
-    "                            y,\n",
-    "                            return_estimator = True,\n",
-    "                            cv = loso_cv,\n",
-    "                            n_jobs=-1,\n",
-    "                            groups=groups,\n",
-    "                            error_score=\"raise\",\n",
-    "                            scoring = {'fscore': make_scorer(f1_score, average='weighted'),\n",
-    "                                        'accuracy': make_scorer(accuracy_score)}\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "    # Concatenate the new values as a DataFrame and append to the existing results\n",
-    "    new_row = pd.DataFrame({'X': [i],\n",
-    "                            'Mean': [np.mean(scores_AdaBoost['test_fscore'])],\n",
-    "                            'Min': [np.min(scores_AdaBoost['test_fscore'])],\n",
-    "                            'Max': [np.max(scores_AdaBoost['test_fscore'])]})\n",
-    "    \n",
-    "    results = pd.concat([results, new_row], ignore_index=True)    \n",
-    "    if(i%100 == 0):\n",
-    "        print(i)\n",
-    "\n",
-    "# Find the index of the maximum mean F-score\n",
-    "max_mean_index = results['Mean'].idxmax()\n",
-    "\n",
-    "print(results.iloc[max_mean_index])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10), \n",
-    "                                         n_estimators=83, random_state=5)\n",
+    "classifier_AdaBoost = AdaBoostClassifier(estimator=RandomForestClassifier(n_estimators=61, min_samples_split=30, min_samples_leaf=1, max_features='sqrt', bootstrap=True, max_depth=10))\n",
     "scaler = RobustScaler()\n",
     "feat_sel = SelectKBest(k=2)\n",
     "\n",
